--- a/all-for-gamers/src/styles/App.css
+++ b/all-for-gamers/src/styles/App.css
@@ -18,7 +18,7 @@ main {
   overflow-x: hidden;
 }
 
-/* couleyr des liens de la nav */
+/* couleur des liens de la nav */
 .navLi {
   text-decoration: none;
   color: RGB(255, 230, 185);
@@ -29,13 +29,7 @@ main {
 }
 
 /*image jeux // carousel ?*/
-img {
-  padding: 15px;
-  max-width: 100%;
-  min-width: 50%;
-  min-height: 50%;
-  max-height: 100%;
-}
+
 
 .imgGames {
   padding: 15px;
@@ -55,6 +49,15 @@ h2 {
   text-decoration: none;
   font-size: 40px;
 }
+
+.avatar {
+  /* width: 100%;
+  height: 100%; */
+  width: 150px;
+  height: 100px;
+}
+
+
 
 
 .title {
@@ -81,7 +84,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+
   padding: 10px;
 
 }
@@ -91,6 +94,7 @@ h2 {
   color: black;
 }
 
+/* images des jeux en grid responsive */
 .container-games {
   margin-top: 50px;
 
@@ -109,13 +113,19 @@ h2 {
 }
 
 
+/*player de video bande annonces jeux*/
+.video {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+}
 
 .desc {
   color: black;
   padding: 10px;
   display: flex;
-  position: relative;
+
   justify-content: center;
 }
 
@@ -136,15 +146,19 @@ footer {
 
 
 .table {
+  width: 100%;
+
   font-size: 0.9rem;
   color: RGB(255, 230, 185);
   background-color: black;
+
 }
 
 .table,
 .table .cell {
   border: 1px solid;
   border-collapse: collapse;
+
 }
 
 .table .cell {
@@ -201,10 +215,16 @@ footer {
   }
 
   .avatar {
-    max-width: 100%;
+    /* max-width: 100%;
     min-width: 50%;
     min-height: 50%;
-    max-height: 100%;
+    max-height: 100%; */
+    width: 150px;
+    height: 50px;
+  }
+
+  h3 {
+    color: RGB(255, 230, 185);
   }
 
   .title1 {
@@ -263,7 +283,7 @@ footer {
   .desc {
     color: RGB(255, 230, 185);
     display: flex;
-    position: relative;
+
     justify-content: center;
   }
 
@@ -298,6 +318,9 @@ footer {
     color: RGB(255, 230, 185);
   }
 
+  .table {
+    width: 50%;
+  }
 
 
 
@@ -342,6 +365,11 @@ footer {
 
   tr {
     margin-bottom: 1rem;
+  }
+
+  .avatar {
+    width: 200px;
+    height: 200px
   }
 
   /* 
